--- a/080124_001.ipynb
+++ b/080124_001.ipynb
@@ -1174,19 +1174,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "d0603561-2ab6-424e-ba2d-c749a3e44c0f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['b']\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1 = KNeighborsClassifier(n_neighbors = 5)\n",
+    "n1.fit(x1_train, y1_train) #모델을 Test Set 으로 훈련\n",
+    "new_x1 = [57,1.02]\n",
+    "prediction1 = n1.predict([new_x1])\n",
+    "print(prediction1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "24613243-f83b-4cf3-b4f0-e638f2c1250c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['b']\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1 = KNeighborsClassifier(n_neighbors = 2)\n",
+    "n1.fit(x1_train, y1_train) #모델을 Test Set 으로 훈련\n",
+    "new_x1 = [57,1.02]\n",
+    "prediction1 = n1.predict([new_x1])\n",
+    "print(prediction1)"
+   ]
   },
   {
    "cell_type": "code",
