--- a/080124_001.ipynb
+++ b/080124_001.ipynb
@@ -1484,8 +1484,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 96,
    "id": "b740b9c4-1b50-47b2-8d2c-3dedcf5a1f01",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n2 = KNeighborsClassifier(n_neighbors = 4)\n",
+    "n2.fit(x2_train, y2_train) #모델을 Test Set 으로 훈련\n",
+    "new_x2 = [123456789, 12345678912]\n",
+    "prediction2 = n2.predict([new_x2])\n",
+    "print(prediction2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "f7fd6de6-d3e2-497b-a544-e21d5bfbd77c",
    "metadata": {
     "tags": []
    },
@@ -1501,7 +1525,7 @@
    "source": [
     "n2 = KNeighborsClassifier(n_neighbors = 4)\n",
     "n2.fit(x2_train, y2_train) #모델을 Test Set 으로 훈련\n",
-    "new_x2 = [1234567, 123456789]\n",
+    "new_x2 = [12345678, 123456789]\n",
     "prediction2 = n2.predict([new_x2])\n",
     "print(prediction2)"
    ]
@@ -1509,7 +1533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7fd6de6-d3e2-497b-a544-e21d5bfbd77c",
+   "id": "572f128a-1b4e-4f36-ac35-007f86a53773",
    "metadata": {},
    "outputs": [],
    "source": []
