--- a/080124_001.ipynb
+++ b/080124_001.ipynb
@@ -1532,8 +1532,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 101,
+   "id": "7f1e9a30-db72-4523-8988-df2fef5e712a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n2 = KNeighborsClassifier(n_neighbors = 5)\n",
+    "n2.fit(x2_train, y2_train) #모델을 Test Set 으로 훈련\n",
+    "new_x2 = [1874125,11251325649]\n",
+    "prediction2 = n2.predict([new_x2])\n",
+    "print(prediction2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "572f128a-1b4e-4f36-ac35-007f86a53773",
+   "id": "27b21098-9a9a-4a56-a20d-3cca6bf412bc",
    "metadata": {},
    "outputs": [],
    "source": []
