--- a/110124_001_학교행복지수.ipynb
+++ b/110124_001_학교행복지수.ipynb
@@ -866,8 +866,355 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "b1745fca-ad95-4d26-a301-5a5f81e6c01f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>GDP.per.capita</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rank</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>10.639267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>10.774001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>10.979933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>10.772559</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>11.087804</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>Central African Republic</td>\n",
+       "      <td>6.625160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150</th>\n",
+       "      <td>Rwanda</td>\n",
+       "      <td>7.600104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>7.865712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>South Sudan</td>\n",
+       "      <td>7.425360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>7.462861</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>153 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Country  GDP.per.capita\n",
+       "Rank                                          \n",
+       "1                      Finland       10.639267\n",
+       "2                      Denmark       10.774001\n",
+       "3                  Switzerland       10.979933\n",
+       "4                      Iceland       10.772559\n",
+       "5                       Norway       11.087804\n",
+       "...                        ...             ...\n",
+       "149   Central African Republic        6.625160\n",
+       "150                     Rwanda        7.600104\n",
+       "151                   Zimbabwe        7.865712\n",
+       "152                South Sudan        7.425360\n",
+       "153                Afghanistan        7.462861\n",
+       "\n",
+       "[153 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "economy = df2020.loc[:,['Country', 'GDP.per.capita']]\n",
+    "economy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "33082b4c-0e97-4006-bda4-865470503686",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "Luxembourg                  11.450681\n",
+       "Singapore                   11.395521\n",
+       "Ireland                     11.160978\n",
+       "United Arab Emirates        11.109999\n",
+       "Kuwait                      11.089825\n",
+       "                              ...    \n",
+       "Liberia                      7.054380\n",
+       "Niger                        6.842167\n",
+       "Congo (Kinshasa)             6.694256\n",
+       "Central African Republic     6.625160\n",
+       "Burundi                      6.492642\n",
+       "Name: GDP.per.capita, Length: 153, dtype: float64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "economy = economy.groupby(economy.Country)['GDP.per.capita'].mean().sort_values(ascending = False )\n",
+    "economy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "d3dae828-3176-40b4-a132-bc22476f5198",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27.0"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "economy = economy.rank(method = 'min', ascending = False )['South Korea']\n",
+    "economy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "6d6b4d18-3ecf-4cef-b4c6-7f0eacef5c0d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#동점일경우 작은순위로 해당 모두 표시 (min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "810303ee-c956-40fe-ab25-d09df4011d64",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "Iceland                     0.974670\n",
+       "Turkmenistan                0.958966\n",
+       "Denmark                     0.955991\n",
+       "Finland                     0.954330\n",
+       "Norway                      0.952487\n",
+       "                              ...   \n",
+       "Rwanda                      0.540835\n",
+       "Burundi                     0.490326\n",
+       "Afghanistan                 0.470367\n",
+       "Benin                       0.468671\n",
+       "Central African Republic    0.319460\n",
+       "Name: Social.support, Length: 153, dtype: float64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "social = df2020.loc[:,['Country', 'Social.support']]\n",
+    "social = social.groupby(social.Country)['Social.support'].mean().sort_values(ascending = False )\n",
+    "social"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "4804210e-b98c-4497-a81d-3c1e6c17356a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99.0"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "social = social.rank(method = 'min', ascending = False )['South Korea']\n",
+    "social"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "9f35c631-daa2-4acc-9182-40208122c36b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "Singapore                    76.804581\n",
+       "Hong Kong S.A.R. of China    76.771706\n",
+       "Japan                        75.000969\n",
+       "Spain                        74.402710\n",
+       "Switzerland                  74.102448\n",
+       "                               ...    \n",
+       "Nigeria                      49.861908\n",
+       "Ivory Coast                  49.503773\n",
+       "Chad                         48.220539\n",
+       "Lesotho                      48.003624\n",
+       "Central African Republic     45.200001\n",
+       "Name: Life.expectancy, Length: 153, dtype: float64"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "life = df2020.loc[:,['Country', 'Life.expectancy']]\n",
+    "life = life.groupby(life.Country)['Life.expectancy'].mean().sort_values(ascending = False )\n",
+    "life"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "2d6a8534-3bf4-4aa0-b692-6e4c0c7bd246",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "life = life.rank(method = 'max', ascending = False )['South Korea']\n",
+    "life"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "746fe76c-5ae9-4221-97f2-c2d57ce551bc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "140.0"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "freedom = df2020.loc[:,['Country', 'Freedom']]\n",
+    "freedom = freedom.groupby(freedom.Country)['Freedom'].mean().sort_values(ascending = False )\n",
+    "freedom = freedom.rank(method = 'max', ascending = False )['South Korea']\n",
+    "freedom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14ab20a9-9d74-45ea-b6a1-f0e589fad860",
    "metadata": {},
    "outputs": [],
    "source": []
